--- a/src/js/components/app.html
+++ b/src/js/components/app.html
@@ -2,5 +2,13 @@
     <div ng-include="'js/components/navbar/navbar.html'"></div>
 
     <ng-view></ng-view>
+
+    <footer class="footer">
+        <div class="container">
+            <p>
+                @copyright
+            </p>
+        </div>
+    </footer>
 </div>
 
