--- a/src/js/components/home/home.html
+++ b/src/js/components/home/home.html
@@ -1,4 +1,4 @@
-<div ng-controller="AppMainController">
+<div ng-controller="HomeController">
 
 
     <div class="jumbotron">
@@ -31,13 +31,7 @@
     </div>
 
 
-    <footer class="footer">
-        <div class="container">
-            <p>
-                @copyright
-            </p>
-        </div>
-    </footer>
+
 
 </div>
 
