--- a/src/js/components/navbar/navbar.html
+++ b/src/js/components/navbar/navbar.html
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="#/">
            <span class="logo">
              Brand
            </span>
@@ -16,7 +16,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#/">How it works?</a></li>
                 <li><a href="#/">FAQ</a></li>
-                <li><a href="#/">Login</a></li>
+                <li><a href="#/login">Login</a></li>
                 <li><a href="#/">Sign Up</a></li>
             </ul>
         </div>
